--- a/croissant-dev-2.html
+++ b/croissant-dev-2.html
@@ -321,8 +321,8 @@
                     <div class="training-course-title">SQL Server Configuration</div>
                     <div class="training-course-image" id="tc-config"></div>
                     <div class="training-course-description">
-                        This course covers functional elements of SQL Server, configuration options, performance tips, and provides guidance on determining optimal configuration.</br>
-                        </br>
+                        This course covers functional elements of SQL Server, configuration options, backup and restore processes, performance tips, and provides guidance on determining optimal configuration.</br>
+                        This couse also covers usage of sp_configure, compatibility levels, and service level options such as Instant File Initialization.</br>
                         </br>
                         <b>Updated:</b> 2021    
                     </div>
