--- a/croissant-dev-2.html
+++ b/croissant-dev-2.html
@@ -19,6 +19,19 @@
             cursor: default;
         }
 
+        a{
+            color: gold;
+            text-decoration: none;
+        }
+
+        a :hover {
+            color: #FFD700;
+        }
+
+        a :active, a :visited{
+            color: goldenrod;
+        }
+
         .container{
             position: absolute;
             top: 0px;
@@ -101,6 +114,7 @@
             vertical-align: text-top;
             margin-top: -40px;
             margin-left: auto;
+            margin-bottom: 30px;
             margin-right: auto;
             padding-left: 10px;
             display: inline-flex;
@@ -111,6 +125,7 @@
             height: 100px;
             width: 100px;
             margin-top: -40px;
+            margin-bottom: 10px;
             border-radius: 50%;
             background-image: url(./assets/profile.png);
             background-size: contain;
@@ -295,7 +310,7 @@
                 <div class="about-text">
                     <p>
                         I'm Andy, author of this pastry-themed SQL repository.</br>
-                        Here you'll find a selection of SQL Server training courses that I've authored, downloadable script files and useful snippets of T-SQL</br>
+                        Here you'll find a selection of SQL Server training courses that I've authored, downloadable script files and useful snippets of T-SQL.</br></br>
                         You can find me over at <a href="https://shadow.coffee">shadow.coffee</a></br>
                     </p>
                 </div>
