--- a/croissant-dev-2.html
+++ b/croissant-dev-2.html
@@ -478,7 +478,7 @@
         
 
         <!--footer-->
-        <div class="footer" style="margin-bottom: -10vh;">
+        <div class="footer" style="margin-bottom: -10vh; background-color: rgba(29,30,32,1); color: #3b3b3b;">
             <span style="color: gold;">&#183;</span> shh, this is a secret debug footer &#128521; this window is:  <span id="debug">1440 x 821</span> <span style="color: gold;">&#183;</span>
         </div>
         <div class="footer">
