--- a/croissant-dev-2.html
+++ b/croissant-dev-2.html
@@ -195,7 +195,18 @@
         .content-section-heading{
             font-size: 30px;
             font-weight: bold;
+            margin-left: auto;
+            margin-right: auto;
             margin-bottom: 50px;
+            padding-left: 6px;
+            padding-right: 6px;
+            width: fit-content;
+
+
+            background: linear-gradient(45deg,rgb(212, 181, 0) 60%, goldenrod 100%);
+            background-repeat: no-repeat;
+            background-size: 100% .3em;
+            background-position: 0 95%;
         }
 
 
@@ -209,6 +220,7 @@
             border: 3px solid #3b3b3b;
 
             width: 60vw;
+            max-width: 1000px;
             margin-top: 20px;
             margin-left: auto;
             margin-bottom: 30px;
@@ -404,7 +416,7 @@
         <div class="main-content">
 
             <div class="content-section">
-                <div class="content-section-heading">Hi there!</div>
+                <div class="content-section-heading">Hello There! <!--general kenobi!--></div>
                 <div class="about-image"></div>
                 <div class="about-text">
                     <p>
@@ -418,9 +430,9 @@
             <div class="divider"></div>
 
             <!--section 1: training courses-->
-            <div class="content-section">
+            <div class="content-section" id="training">
                 <!--header-->
-                <div class="content-section-heading" id="training">Training Courses</div>
+                <div class="content-section-heading">Training Courses</div>
 
                 <!--course 1: T-SQL Basics-->
                 <div class="training-course">
