--- a/croissant-dev-2.html
+++ b/croissant-dev-2.html
@@ -313,6 +313,33 @@
         /********************/
 
 
+        /********************/
+        /* Scripts          */
+        /********************/
+
+
+        .script{
+            border: 3px solid #3b3b3b;
+            height: auto;
+            min-height: 100px;
+            width: 60vw;
+            max-width: 900px;
+            margin-top: 20px;
+            margin-left: auto;
+            margin-bottom: 30px;
+            margin-right: auto;
+
+            padding-top: 20px;
+            padding-left: 20px;
+            padding-right: 20px;
+
+            text-align: center;
+        }
+
+
+        /********************/
+
+
         /* footer section */
         .footer{
             /*height: 250px;
