--- a/croissant-dev-2.html
+++ b/croissant-dev-2.html
@@ -119,8 +119,8 @@
             background: rgba(0,0,0,0.25);
             text-align: center;
             line-height: 230px;
-            font-weight: 700;
-            font-size: 60px;
+            font-weight: 600;
+            font-size: 70px;
             color: #f8f8f8;
         }
 
@@ -141,15 +141,17 @@
         .about-text{
             height: 100px;
             width: calc(40vw - 100px);
-            text-align: justify;
+            text-align: left;
             vertical-align: text-top;
-            margin-top: -40px;
+            margin-top: -30px;
             margin-left: auto;
             margin-bottom: 30px;
             margin-right: auto;
             padding-left: 10px;
             display: inline-flex;
             vertical-align: bottom;
+
+            font-weight: 200;
         }
 
         .about-image{
@@ -193,7 +195,7 @@
         /********************/
 
         .content-section-heading{
-            font-size: 30px;
+            font-size: 32px;
             font-weight: bold;
             margin-left: auto;
             margin-right: auto;
@@ -202,7 +204,7 @@
             padding-right: 6px;
             width: fit-content;
 
-
+            font-weight: 500;
             background: linear-gradient(45deg,rgb(212, 181, 0) 60%, goldenrod 100%);
             background-repeat: no-repeat;
             background-size: 100% .3em;
@@ -235,7 +237,7 @@
 
         .training-course-title{
             text-align: left;
-            font-weight: bold;
+            font-weight: 500;
             font-size: 22px;
             margin-bottom: 15px;
             text-align: left;
@@ -268,7 +270,8 @@
             display: inline-block;
             padding:10px;
             text-align: left;
-            font-size: 15px;
+            font-size: 16px;
+            font-weight: 300;
 
             vertical-align: bottom;
         }
@@ -306,13 +309,13 @@
         }
 
         .training-course-download-link-disabled{
-            background-color: #b9b9b9;
+            background-color: darkgrey;
             width: 100%;
-            color: #0b0b0b;
+            color: grey;
             cursor: not-allowed;
         }
         .training-course-download-link-disabled:hover{
-            color: #0b0b0b;
+            color: grey;
         }
 
         
@@ -482,7 +485,7 @@
                         The T-SQL section covers SELECT, FROM, WHERE, UPDATE, JOIN, and Transactions and their importance.</br>
                         Additionally, this course also contains a practical exercise portion, to familiarise trainees with the course content.</br>
                         </br>
-                        <b>Updated:</b> 2021
+                        <span style="font-weight: 500;">Updated:</span>  May 02021    
                     </div>
                     <div class="training-course-downloads">
                         <div class="training-course-download-linkbox"><a class="training-course-download-link">Slide Deck</a></div>
@@ -511,7 +514,7 @@
                         This course covers functional elements of SQL Server, configuration options, backup and restore processes, performance tips, and provides guidance on determining optimal configuration.</br>
                         This couse also covers usage of sp_configure, compatibility levels, and service level options such as Instant File Initialization.</br>
                         </br>
-                        <b>Updated:</b> 2021    
+                        <span style="font-weight: 500;">Updated:</span>  May 02021    
                     </div>
                     <div class="training-course-downloads">
                         <div class="training-course-download-linkbox"><a class="training-course-download-link">Slide Deck</a></div>
