--- a/croissant-dev-2.html
+++ b/croissant-dev-2.html
@@ -128,7 +128,7 @@
             background-color: rgba(29,30,32,1);
             min-height: 500px;
             height: auto;
-            padding-top: 50px;
+            padding-top: 80px;
             text-align: center;
         }
 
@@ -141,6 +141,7 @@
         .about-text{
             height: 100px;
             width: calc(40vw - 100px);
+            max-width: 700px;
             text-align: left;
             vertical-align: text-top;
             margin-top: -30px;
@@ -151,13 +152,13 @@
             display: inline-flex;
             vertical-align: bottom;
 
-            font-weight: 200;
+            font-weight: 300;
         }
 
         .about-image{
             height: 100px;
             width: 100px;
-            margin-top: -40px;
+            margin-top: -30px;
             margin-bottom: 10px;
             border-radius: 50%;
             background-image: url(./assets/profile.png);
