--- a/croissant-dev-2.html
+++ b/croissant-dev-2.html
@@ -530,6 +530,9 @@
                 display: block;
                 margin-bottom: 20px;
             }
+            .footer{
+                padding-bottom: 20px;
+            }
         }
         
     </style>
@@ -682,7 +685,7 @@
         
 
         <!--footer-->
-        <div class="footer" style="margin-bottom: -10vh; background-color: rgba(29,30,32,1); color: #3b3b3b;">
+        <div class="footer" style="margin-bottom: -10vh; background-color: rgba(29,30,32,1); color: #3b3b3b; padding-bottom: 0px;">
             <span style="color: gold;">&#183;</span> shh, this is a secret debug footer <span style="color: gold;">&#183;</span> this window is:  <span id="debug">1440 x 821</span> <span style="color: gold;">&#183;</span>
         </div>
         <div class="footer">
