--- a/croissant-dev-3.html
+++ b/croissant-dev-3.html
@@ -220,8 +220,8 @@
         /* training courses */
         /********************/
         .training-course{
-            border: 3px solid #3b3b3b;
-
+            border: 2px solid #3b3b3b;
+            border-radius: .28571429rem;
             width: 60vw;
             max-width: 900px;
             margin-top: 20px;
@@ -229,7 +229,7 @@
             margin-bottom: 30px;
             margin-right: auto;
 
-            padding-top: 20px;
+            padding-top: 0px;
             padding-left: 20px;
             padding-right: 20px;
 
@@ -240,32 +240,41 @@
             text-align: left;
             font-weight: 500;
             font-size: 22px;
-            margin-bottom: 15px;
+            margin-bottom: 5px;
+            margin-left: 20px;
+            margin-top: 10px;
+        }
+
+        .training-course-update-tag{
             text-align: left;
-            margin-left: 5px;
+            font-weight: 300;
+            font-size: 15px;
+            margin-bottom: 15px;
+            margin-left: 20px;
+            margin-top: 5px;
         }
 
         .training-course-image{
-            min-height: 216px;
-            min-width:384px;
-            height: auto;
+            min-height: 506px;
             object-fit: cover;
-            
-            width: 48.7%;
+            height: fit-content;
             background-color: #2b2b2b;
-            background-size: cover;
+            background-repeat: no-repeat;
+            background-size: contain;
             margin-bottom: 5px;
-            display: inline-block;
-            vertical-align: bottom;
+            display: block;
             margin-left: 0px;
             margin-right: 5px;
+
+            border-top-left-radius: .28571429rem;
+            border-top-right-radius: .28571429rem;
         }
 
         .training-course-description{
             height:196px;
             /*width:calc(60vw - 384px - 20px - 12px - 18px - 5px);*/
             width: calc(48.6% - 20px);
-            margin-left: 5px;
+            margin-left: 20px;
             margin-bottom: 5px;
             margin-right: 0px;
             display: inline-block;
@@ -505,11 +514,13 @@
                 margin:0;
                 min-width: 100%;
                 width: 100%;
+                height: 25%;
             }
             .training-course-description, .script-description{
-                min-width: calc(100% - 20px);
-                width: calc(100% - 20px);
-                padding: 10px;
+                min-width: calc(100% - 50px);
+                width: calc(100% - 50px);
+                padding: 20px;
+                padding-right: 30px;
                 text-align: justify;
                 word-wrap: break-word;
                 display: block;
@@ -521,12 +532,15 @@
             .training-course-downloads{
                 margin-bottom: 20px;
             }
-            .training-course-download-linkbox, .script-download{
-                width: 90%;
+            .training-course-download-linkbox{
+                width: 47%;
                 margin-top: 10px;
                 margin-bottom: 0px;
             }
             .script-download{
+                width: 90%;
+                margin-top: 10px;
+                margin-bottom: 0px;
                 display: block;
                 margin-bottom: 20px;
             }
@@ -594,7 +608,8 @@
             .footer{
                 padding: 0px;
             }
-
+            }
+            /*
             .training-course{
                 border: 3px solid #3b3b3b;
 
@@ -639,7 +654,6 @@
 
             .training-course-description{
                 height:196px;
-                /*width:calc(60vw - 384px - 20px - 12px - 18px - 5px);*/
                 min-width: calc(48.6% - 20px);
                 width: calc(48.6% - 20px);
                 margin-left: 5px;
@@ -698,7 +712,7 @@
             .training-course-downloads{
                 margin:0px;
             }
-        }
+        }*/
         
     </style>
 </head>
@@ -749,14 +763,14 @@
 
                 <!--course 1: T-SQL Basics-->
                 <div class="training-course">
-                    <div class="training-course-title">Basic T-SQL Querying</div>
                     <div class="training-course-image" id="tc-basic"></div>
+                    <div class="training-course-title">Basic T-SQL Querying</div>
+                    <div class="training-course-update-tag"><span style="font-weight: 500;">Updated:</span>  May 02021</div>
                     <div class="training-course-description"><!--54 words-->
                         This course provides a basic overview of SQL Server, relational database theory, database building blocks and an introduction into the T-SQL language and its syntax.
                         The T-SQL section covers SELECT, FROM, WHERE, UPDATE, JOIN, and Transactions and their importance.</br>
                         Additionally, this course also contains a practical exercise portion, to familiarise trainees with the course content.</br>
-                        </br>
-                        <span style="font-weight: 500;">Updated:</span>  May 02021    
+                        </br>    
                     </div>
                     <div class="training-course-downloads">
                         <div class="training-course-download-linkbox"><a class="training-course-download-link">Slide Deck</a></div>
@@ -766,8 +780,9 @@
 
                 <!--course 2: Advanced T-SQL-->
                 <div class="training-course">
-                    <div class="training-course-title">Advanced T-SQL Querying</div>
                     <div class="training-course-image" id="tc-placeholder"></div>
+                    <div class="training-course-title">Advanced T-SQL Querying</div>
+                    <div class="training-course-update-tag"><span style="font-weight: 500;">Updated:</span>  May 02021</div>
                     <div class="training-course-description">
                         <span style="line-height: 196px;">This course is upcoming.</span>
                     </div>
@@ -779,13 +794,13 @@
 
                 <!--course 3: SQL Server Configuration-->
                 <div class="training-course">
-                    <div class="training-course-title">SQL Server Configuration</div>
                     <div class="training-course-image" id="tc-config"></div>
+                    <div class="training-course-title">SQL Server Configuration</div>
+                    <div class="training-course-update-tag"><span style="font-weight: 500;">Updated:</span>  May 02021</div>
                     <div class="training-course-description">
                         This course covers functional elements of SQL Server, configuration options, backup and restore processes, performance tips, and provides guidance on determining optimal configuration.</br>
                         This couse also covers usage of sp_configure, compatibility levels, and service level options such as Instant File Initialization.</br>
-                        </br>
-                        <span style="font-weight: 500;">Updated:</span>  May 02021    
+                        </br>         
                     </div>
                     <div class="training-course-downloads">
                         <div class="training-course-download-linkbox"><a class="training-course-download-link">Slide Deck</a></div>
@@ -795,8 +810,9 @@
 
                 <!--course 4: SQL Server Extended Events-->
                 <div class="training-course">
-                    <div class="training-course-title">SQL Server Extended Events</div>
                     <div class="training-course-image" id="tc-placeholder"></div>
+                    <div class="training-course-title">SQL Server Extended Events</div>
+                    <div class="training-course-update-tag"><span style="font-weight: 500;">Updated:</span>  May 02021</div>
                     <div class="training-course-description">
                         <span style="line-height: 196px;">This course is upcoming.</span>
                     </div>
